--- a/package.json
+++ b/package.json
@@ -1,39 +1,53 @@
 {
-  "name": "api_server",
+  "name": "server",
   "version": "1.0.0",
   "description": "`./npm install`",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/caoqui/Server_Graduation_Thesis.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/caoqui/Server_Graduation_Thesis/issues"
+  },
+  "homepage": "https://github.com/caoqui/Server_Graduation_Thesis#readme",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-google-oauth20": "^2.0.14",
+    "ts-node": "^10.9.2"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cache": "^3.0.0",
+    "class-validator": "^0.14.1",
+    "clean": "^4.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
-    "formidable": "^3.5.1",
-    "jsonwebtoken": "^9.0.0",
-    "jwt-decode": "^3.1.2",
-    "nodemailer": "^6.9.7",
-    "nodemon": "^2.0.22",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "npm": "^10.4.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-google-oidc": "^0.1.0",
-    "pg-promise": "^11.4.3",
-    "socket.io": "^4.7.3",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3",
-    "uuid": "^9.0.1",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {}
+    "typeorm": "^0.3.20",
+    "typescript": "^5.3.3"
+  }
 }
