--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.14",
@@ -43,6 +44,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.10",
     "npm": "^10.4.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
