--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "npm": "^10.4.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "typeorm": "^0.3.12",
