logout, login by google, keys facebook

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ EMAIL_ADDRESS="huy183605@gmail.com"
 EMAIL_PASSWORD="kwdu xslr mrtc szjc"
 EMAIL_SERVICE="gmail"
 JWT_SECRETKEY_MAIL="jwt-secret-key-mail-123"
-URL_CLIENT="http://localhost:3000"
+URL_CLIENT="https://fe-salon-oto.vercel.app/"
 URLSEVER="http://localhost:5000"
 
 GOOGLE_CLIENT_ID= '146451497096-20opkm9vb1m2gtjq1pt203jq23mvi6tc.apps.googleusercontent.com'
@@ -22,6 +22,6 @@ GOOGLE_CLIENT_SECRET= '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'
 GOOGLE_CALLBACK_URL = 'http://localhost:5000/auth/google/callback'
 GOOGLE_PASSWORD_RANDOM = "msd123!@AFV"
 SESSION_SECRET_KEY = 'ABCXYZ123'
-CLIENT_ID = 726856578907032
-CLIENT_SECRET = 'd6a3f4efcbb798c2fa8a9a6f9db815a8'
+CLIENT_ID = 1315933432409339
+CLIENT_SECRET = 'c5abb2c83fb5fa94d9e658b23784c69a'
 CALL_BACK_URL = "http://localhost:5000/auth/facebook/callback"
