--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.14",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
