--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
