edit keys facebook, fix bug login by facebook

--- a/.env
+++ b/.env
@@ -28,6 +28,6 @@ GOOGLE_CLIENT_SECRET= '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'
 GOOGLE_CALLBACK_URL = 'http://localhost:5000/auth/google/callback'
 GOOGLE_PASSWORD_RANDOM = "msd123!@AFV"
 SESSION_SECRET_KEY = 'ABCXYZ123'
-CLIENT_ID = 1315933432409339
-CLIENT_SECRET = 'c5abb2c83fb5fa94d9e658b23784c69a'
+CLIENT_ID = "1441519083155330"
+CLIENT_SECRET = '085774576197c39cebbf3524720f6364'
 CALL_BACK_URL = "http://localhost:5000/auth/facebook/callback"
