--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ EMAIL_ADDRESS="huy183605@gmail.com"
 EMAIL_PASSWORD="kwdu xslr mrtc szjc"
 EMAIL_SERVICE="gmail"
 JWT_SECRETKEY_MAIL="jwt-secret-key-mail-123"
-URL_CLIENT="https://fe-salon-oto.vercel.app/"
+URL_CLIENT="https://fe-salon-oto.vercel.app"
 URLSEVER="http://localhost:5000"
 
 GOOGLE_CLIENT_ID= '146451497096-20opkm9vb1m2gtjq1pt203jq23mvi6tc.apps.googleusercontent.com'
