--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_USERNAME = "postgres"
 DB_HOST = "localhost"
 DB_NAME = "Graduation_Thesis"
-DB_PASSWORD = "123321ok"
-DB_PORT = "5321"
+DB_PASSWORD = "123456"
+DB_PORT = "5432"
 
 # DB_USERNAME = "postgres"
 # DB_HOST = "localhost"
@@ -20,7 +20,7 @@ EMAIL_ADDRESS="huy183605@gmail.com"
 EMAIL_PASSWORD="kwdu xslr mrtc szjc"
 EMAIL_SERVICE="gmail"
 JWT_SECRETKEY_MAIL="jwt-secret-key-mail-123"
-URL_CLIENT="https://fe-salon-oto.vercel.app"
+URL_CLIENT="http://localhost:3000"
 URLSEVER="http://localhost:5000"
 
 GOOGLE_CLIENT_ID= '146451497096-20opkm9vb1m2gtjq1pt203jq23mvi6tc.apps.googleusercontent.com'
