--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_USERNAME = "postgres"
 DB_HOST = "localhost"
 DB_NAME = "Graduation_Thesis"
-DB_PASSWORD = "123456"
-DB_PORT = "5432"
+DB_PASSWORD = "123321ok"
+DB_PORT = "5321"
 
 # DB_USERNAME = "postgres"
 # DB_HOST = "localhost"
@@ -25,7 +25,7 @@ URLSEVER="http://localhost:5000"
 
 GOOGLE_CLIENT_ID= '146451497096-20opkm9vb1m2gtjq1pt203jq23mvi6tc.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET= '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'
-GOOGLE_CALLBACK_URL = 'http://localhost:5000/auth/google/callback'
+GOOGLE_CALLBACK_URL = 'http://localhost:3000/auth/google/callback'
 GOOGLE_PASSWORD_RANDOM = "msd123!@AFV"
 SESSION_SECRET_KEY = 'ABCXYZ123'
 CLIENT_ID = "1441519083155330"
