--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-DB_USERNAME = "postgres"
-DB_HOST = "localhost"
-DB_NAME = "Graduation_Thesis"
-DB_PASSWORD = "123321ok"
-DB_PORT = "5321"
-
 # DB_USERNAME = "postgres"
 # DB_HOST = "localhost"
 # DB_NAME = "Graduation_Thesis"
-# DB_PASSWORD = "vinguyen12345"
-# DB_PORT = "5432"
+# DB_PASSWORD = "123321ok"
+# DB_PORT = "5321"
+
+DB_USERNAME = "postgres"
+DB_HOST = "localhost"
+DB_NAME = "Graduation_Thesis"
+DB_PASSWORD = "vinguyen12345"
+DB_PORT = "5432"
 
 DB_MAX = 10
 PORT = 5000
