--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "cache": "^3.0.0",
     "class-validator": "^0.14.1",
     "clean": "^4.0.2",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.10",
     "npm": "^10.4.0",
     "passport": "^0.7.0",
