--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.10",
@@ -60,6 +61,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
+    "socket.io": "^4.7.5",
     "typeorm": "^0.3.12",
     "typescript": "^4.9.5"
   }
