--- a/gateway/package.json
+++ b/gateway/package.json
@@ -8,7 +8,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-http-proxy": "^1.6.6"
+    "@types/express-http-proxy": "^1.6.6",
+    "concurrently": "^8.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
