--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-http-proxy": "^2.0.0",
+    "express-session": "^1.18.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-http-proxy": "^1.6.6",
+    "@types/express-session": "^1.18.0",
     "concurrently": "^8.2.2"
   },
   "scripts": {
