--- a/.env
+++ b/.env
@@ -1,14 +1,10 @@
-# DB_USERNAME = "postgres"
-# DB_HOST = "localhost"
-# DB_NAME = "Graduation_Thesis"
-# DB_PASSWORD = "123321ok"
-# DB_PORT = "5321"
 
-DB_USERNAME = "postgres"
-DB_HOST = "localhost"
-DB_NAME = "Graduation_Thesis"
-DB_PASSWORD = "vinguyen12345"
-DB_PORT = "5432"
+DB_HOT_NAME_CLOUD = "dpg-coafq1cf7o1s73dpdj00-a"
+DB_PORT_CLOUD = "5432"
+DB_NAME_CLOUD = "salon_oto"
+DB_USERNAME_CLOUD = "root"
+DB_PASSWORD_CLOUD = "jGpJ6TBFvQrHImqyGnWs6lezAxrNFPhj"
+DB_URL_CLOUD = "postgres://root:jGpJ6TBFvQrHImqyGnWs6lezAxrNFPhj@dpg-coafq1cf7o1s73dpdj00-a.oregon-postgres.render.com/salon_oto"
 
 DB_MAX = 10
 PORT = 5000
@@ -50,3 +46,7 @@ VIDEOSDK_API_ENDPOINT="https://api.videosdk.live"
 #Zegocloud
 ZEGOCLOUD_APP_ID = "981916693"
 ZEGOCLOUD_SERVER_SECRET = "4a95c963d441f725a12b8ca4252c3757"
+
+USER_ID_ADMIN_TEAM = "d5ca4fa6-e89e-408f-aeab-d1c855467ab5"
+USERNAME_ADMIN_TEAM = "admin-team-salon-oto"
+PASSWORD_ADMIN_TEAM = "admin123abcDEF@@"
