update url server

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ EMAIL_SERVICE="gmail"
 JWT_SECRETKEY_MAIL="jwt-secret-key-mail-123"
 
 URL_CLIENT="http://localhost:3000"
-URLSEVER="http://localhost:5000"
+URLSEVER="https://server-graduation-thesis-1.onrender.com"
 
 # Google
 GOOGLE_CLIENT_ID= '146451497096-20opkm9vb1m2gtjq1pt203jq23mvi6tc.apps.googleusercontent.com'
