fix infor gmail

--- a/.env
+++ b/.env
@@ -12,8 +12,10 @@ PORT = 5000
 JWT_ACCESS_KEY= 'jwt-access-key'
 JWT_REFRESH_KEY= 'jwt-refresh-key'
 
-EMAIL_ADDRESS="huy183605@gmail.com"
-EMAIL_PASSWORD="kwdu xslr mrtc szjc"
+#EMAIL_ADDRESS="huy183605@gmail.com"
+#EMAIL_PASSWORD="kwdu xslr mrtc szjc"
+EMAIL_ADDRESS="salon.oto.fit.hcmus.2024@gmail.com"
+EMAIL_PASSWORD="dggo axtv ifhf grfm"
 EMAIL_SERVICE="gmail"
 JWT_SECRETKEY_MAIL="jwt-secret-key-mail-123"
 
