--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.5",
     "typeorm": "^0.3.12",
     "typescript": "^4.9.5"
