--- a/.env
+++ b/.env
@@ -49,6 +49,12 @@ VIDEOSDK_API_ENDPOINT="https://api.videosdk.live"
 ZEGOCLOUD_APP_ID = "981916693"
 ZEGOCLOUD_SERVER_SECRET = "4a95c963d441f725a12b8ca4252c3757"
 
+# admin - salon team
 USER_ID_ADMIN_TEAM = "d5ca4fa6-e89e-408f-aeab-d1c855467ab5"
 USERNAME_ADMIN_TEAM = "admin-team-salon-oto"
 PASSWORD_ADMIN_TEAM = "admin123abcDEF@@"
+
+#Redis
+REDIS_PASSWORD = 'Dd1hXlWj16FXjPIYjDJ37c3Lo51mI5z3'
+REDIS_HOST = 'redis-16073.c263.us-east-1-2.ec2.cloud.redislabs.com'
+REDIS_PORT = 16073
