--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.10",
     "npm": "^10.4.0",
