--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dateformat": "^5.0.3",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
